--- a/bower.json
+++ b/bower.json
@@ -72,7 +72,7 @@
     "ovh-angular-doc-url": "^0.0.6",
     "ovh-angular-module-status": "^1.0.0",
     "ovh-angular-otrs": "^3.0.0",
-    "ovh-api-services": "^2.1.13",
+    "ovh-api-services": "https://github.com/ovh-ux/ovh-api-services.git#feature/nasha-agora-order",
     "angular-chart.js": "^1.1.1",
     "ovh-angular-list-view": "^0.1.5",
     "jsurl": "https://github.com/Sage/jsurl.git#v0.1.5",
@@ -99,8 +99,7 @@
     "ovh-common-style": "^3.2.2",
     "lodash": "~3.10.1",
     "ovh-angular-actions-menu": "^2.0.0",
-    "ng-at-internet": "^3.0.0",
-    "ovh-api-services": "feature/nasha-agora-order"
+    "ng-at-internet": "^3.0.0"
   },
   "overrides": {
     "angular-strap": {
