--- a/bower.json
+++ b/bower.json
@@ -98,7 +98,7 @@
     "lodash": "~3.10.1",
     "ovh-angular-actions-menu": "^2.0.0",
     "ng-at-internet": "^3.0.0",
-    "ovh-api-services": "feature/iplb-vrack-add",
+    "ovh-api-services": "feature/iplb-vrack-add"
   },
   "overrides": {
     "angular-strap": {
